--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,6 @@
  */
 
 
-
 #map{
   width: 60%;
   height: 60%;
@@ -39,9 +38,20 @@ body {
   // font-family: 'Squada One', cursive;
   // font-family: 'Monoton', cursive;
   // font-family: 'Gugi', cursive;
-  font-family: 'Iceland', cursive;
+  // font-family: 'Iceland', cursive;
+  font-family: 'Major Mono Display', monospace;
+  // font-family: 'Text Me One', sans-serif;
   background-color: black;
   color: white;
+}
+
+.dropdown-menu{
+  background-color: black;
+
+}
+
+.nav{
+  font-size: 11px;
 }
 
 .toplogo{
@@ -52,11 +62,17 @@ body {
 #catrow{
   color: #D4AF37;
   font-size: 17px;
+  border-radius: 10px;
+  border-style: solid;
+  border-color: #D4AF37;
+  border-width: 3px;
+  width: 340px;
+
 }
 
-a:hover { 
-  background-color: lavender;
-}
+// a:hover { 
+//   background-color: lavender;
+// }
 
 #pro_business{
   background-color: rgba(80, 14, 107, 0.9);
@@ -77,15 +93,17 @@ a:hover {
   background-color: black;
   // background-color: #D4AF37;
   // background-image: url("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/bacground1440.png");
-  border-color: black;
-  border-width: 7px;
+  border-color: rgba(212,175,55, 0.3);
+  border-width: 0.5px;
+  border-style: solid;
+  
   padding-top: 6%;
-  opacity: 0.3;
+  
   border-radius: 10px;
 
 }
 .thumbnail:hover{
-  opacity: 0.8;
+  border-color: rgba(212,175,55, 0.9)
 }
 
 #t_backdrop{
@@ -93,7 +111,9 @@ a:hover {
 }
 
 #thumbs{
-  height: 150px !important
+  height: 170px !important;
+  width: 90% !important;
+  
   
 }
 
@@ -107,6 +127,7 @@ a:hover {
 
 #pic_row{
   margin-top: 0%;
+  margin-bottom: 10%;
 }
 
 .rev{
