--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,43 +1,40 @@
     <!-- Footer -->
-    <footer class="footer" style="background-color: #D4AF37; height: 320px; width: 100%; padding: 3%; color: black; margin-top: 25%; border-radius: 10px; opacity: 0.8">
+    <footer class="footer" style=" height: auto; width: 95%; padding: 1%; padding-bottom: -10%; color: black; margin-top: 25%; border-radius: 10px; border-width: 10px; border-color: #D4AF37; border-style: solid;  opacity: 0.8">
 
     	<div class="row">
-    		    	<div class="col-md-6" >
-	    	 <h4 align="center">
-	    		&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp  Links:
-	    	</h4>
-			<ul align="center">
-				<li><%= link_to "Home", root_path, style: "color: black;" %></li>
-				<li><%= link_to "Store", products_path, style: "color: black;" %></li>
-				<li><%= link_to "Business Services", businesses_path, style: "color: black;" %></li>
-				<li><%= link_to "About Us", pages_about_path, style: "color: black;" %></li>
-				<li><%= link_to "Contact Us", pages_contact_path, style: "color: black;" %></li>
-				
-			</ul>
+            <div class="col-xs-12">
+                <div class="col-xs-6 left" >
+                    <div align="center">
+                      <img src="https://s3.amazonaws.com/tbwigsassets/assets/BLACKWOMANISGOD+GOLD.png" style="height: auto; width: 300px;" align="center"> 
+                    </div>
 
-			<br>
-			<br>
+                </div> 
+
+                <div class="col-xs-6 right">
+ 
+                    <ul align="center" style="list-style-type: none; margin-top:80px; width: 200px">
+                        <li><%= link_to "Home", root_path, style: "color: #D4AF37; margin: 5px;" %></li>
+                        <li><%= link_to "Store", products_path, style: "color: #D4AF37; margin: 5px;" %></li>
+                        <li><%= link_to "Business Services", businesses_path, style: "color: #D4AF37; margin: 5px;" %></li>
+                        <li><%= link_to "About Us", pages_about_path, style: "color: #D4AF37; margin: 5px;" %></li>
+                        <li><%= link_to "Contact Us", pages_contact_path, style: "color: #D4AF37; margin: 5px;" %></li>
+                        <li><a href="https://www.instagram.com/tbwig_stores/?hl=en" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+                        
+                    </ul>
+
+                </div>
 
 
-			 
-    	</div>
+            </div>
 
-    	<div class="col-md-6">
-    		<h4 align="center">
-    			&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp   Contact:
-    		</h4>
 
-    		<ul align="center">
-    			<li><strong>Email:</strong> Theblackwomanisgodstores@gmail.com </li>
-    			<li><a href="https://www.instagram.com/tbwig_stores/?hl=en" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
-    		</ul>
-    	</div>
+
     	</div>
 
 	
 
     	<div class="row" align="center">
-				<h5>Copyright © 2018</h5>
+				<h5>The Black Woman Is God Stores © 2018</h5>
     	</div>
 
 
