--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -14,33 +14,33 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
-      <li><%= link_to image_tag("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/BLACKWOMANISGOD+GOLD.png", :class => "navhomepic"), pages_home_path %></li>
-      <li><%= link_to image_tag("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/STORE+GOLD.png", :class => "navstorepic"), products_path %></li>
-      <li><%= link_to image_tag("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/blkbuzservcblkgold.png", :class => "navbizpic"), businesses_path %></li>
-      <li><%= link_to image_tag("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/aboutusgold.png", :class => "navaboutpic"), pages_about_path %></li>
-      <li><%= link_to image_tag("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/contactgold.png", :class => "navcontactpic"), pages_contact_path %></li>
+      <li><%= link_to image_tag("https://s3.amazonaws.com/tbwigsassets/assets/BLACKWOMANISGOD+GOLD.png", :class => "navhomepic"), pages_home_path %></li>
+      <li><%= link_to image_tag("https://s3.amazonaws.com/tbwigsassets/assets/STORE+GOLD.png", :class => "navstorepic"), products_path %></li>
+      <li><%= link_to image_tag("https://s3.amazonaws.com/tbwigsassets/assets/blkbuzservcblkgold2.png", :class => "navbizpic"), businesses_path %></li>
+      <li><%= link_to image_tag("https://s3.amazonaws.com/tbwigsassets/assets/aboutusgold.png", :class => "navaboutpic"), pages_about_path %></li>
+      <li><%= link_to image_tag("https://s3.amazonaws.com/tbwigsassets/assets/contactgold.png", :class => "navcontactpic"), pages_contact_path %></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="color: #D4AF37; opacity: 0.85; " ><%= current_user.username %>'s Account <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "View Profile", user_path(current_user) %></li>
-            <li><%= link_to "Manage Sales", sales_path(current_user) %></li>
-            <li><%= link_to "View Purchases", purchases_path(current_user) %></li>
+            <li><%= link_to "View Profile", user_path(current_user), style: "color: #D4AF37; size: 10px;" %></li>
+            <li><%= link_to "Manage Sales", sales_path(current_user), style: "color: #D4AF37; size: 10px;" %></li>
+            <li><%= link_to "View Purchases", purchases_path(current_user), style: "color: #D4AF37; size: 10px;" %></li>
           </ul>
         </li>
 
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="color: #D4AF37; opacity: 0.85; " ><%= current_user.username %> <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Edit Account", edit_user_registration_path %></li>
-            <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+            <li><%= link_to "Edit Account", edit_user_registration_path, style: "color: #D4AF37; size: 10px;" %></li>
+            <li><%= link_to "Sign Out", destroy_user_session_path, style: "color: #D4AF37; size: 10px;", method: :delete %></li>
           </ul>
         </li>
       <% else %>
-        <li><%= link_to image_tag("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/signupgold.png", :class => "navsignuppic"), new_user_registration_path %></li>
-        <li><%= link_to image_tag("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/signingold.png", :class => "navsigninpic"), new_user_session_path %></li>
+        <li><%= link_to image_tag("https://s3.amazonaws.com/tbwigsassets/assets/signupgold.png", :class => "navsignuppic"), new_user_registration_path %></li>
+        <li><%= link_to image_tag("https://s3.amazonaws.com/tbwigsassets/assets/signingold.png", :class => "navsigninpic"), new_user_session_path %></li>
       <% end %>
     </ul>
   </div><!-- /.navbar-collapse -->
