--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,12 +1,13 @@
-<div class="row" align="center">
-	<div class="col-md-12">
-		<h1 style="color: #D4AF37">Edit Product</h1>
+<div data-aos="fade-up" data-aos-duration="1000">
+	<div class="row" align="center" data-aos="fade-up" data-aos-duration="1500">
+		<div class="col-md-12">
+			<h1 style="color: #D4AF37">Edit Product</h1>
+		</div>
 	</div>
-</div>
 
 
 
-  <%= render 'form_edit', product: @product %>
+	  <%= render 'form', product: @product %>
 
 
 </div>
